@@ -74,10 +74,10 @@ class OS_Windows extends OS {
 	/**
 	 * getOS 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return string current windows version
 	 */
-	private function getOS() {
+	public function getOS() {
 		
 		foreach ($this->wmi->ExecQuery("SELECT Caption FROM Win32_OperatingSystem") as $os) {
 			return $os->Caption;
@@ -89,10 +89,10 @@ class OS_Windows extends OS {
 	/**
 	 * getKernel 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return string kernel version
 	 */
-	private function getKernel() {
+	public function getKernel() {
 	
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -109,10 +109,10 @@ class OS_Windows extends OS {
 	/**
 	 * getHostName 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return string the host name
 	 */
-	private function getHostName() {
+	public function getHostName() {
 		
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -128,10 +128,10 @@ class OS_Windows extends OS {
 	/**
 	 * getRam 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array the memory information
 	 */
-	private function getRam(){
+	public function getRam(){
 		
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -160,10 +160,10 @@ class OS_Windows extends OS {
 	/**
 	 * getCPU 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array of cpu info
 	 */
-	private function getCPU() {
+	public function getCPU() {
 		
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -200,10 +200,10 @@ class OS_Windows extends OS {
 	/**
 	 * getUpTime 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return string uptime
 	 */
-	private function getUpTime () {
+	public function getUpTime () {
 		
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -232,10 +232,10 @@ class OS_Windows extends OS {
 	/**
 	 * getHD 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array the hard drive info
 	 */
-	private function getHD() {
+	public function getHD() {
 		
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -272,10 +272,10 @@ class OS_Windows extends OS {
 	/**
 	 * getTemps 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array the temps
 	 */
-	private function getTemps() {
+	public function getTemps() {
 	
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -287,10 +287,10 @@ class OS_Windows extends OS {
 	/**
 	 * getMounts 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array the mounted the file systems
 	 */
-	private function getMounts() {
+	public function getMounts() {
 		
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -374,10 +374,10 @@ class OS_Windows extends OS {
 	/**
 	 * getDevs 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array of devices
 	 */
-	private function getDevs() {
+	public function getDevs() {
 		
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -413,10 +413,10 @@ class OS_Windows extends OS {
 	/**
 	 * getRAID 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array of raid arrays
 	 */
-	private function getRAID() {
+	public function getRAID() {
 	
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -428,10 +428,10 @@ class OS_Windows extends OS {
 	/**
 	 * getLoad 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array of current system load values
 	 */
-	private function getLoad() {
+	public function getLoad() {
 	
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -447,10 +447,10 @@ class OS_Windows extends OS {
 	/**
 	 * getNet 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array of network devices
 	 */
-	private function getNet() {
+	public function getNet() {
 	
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -555,10 +555,10 @@ class OS_Windows extends OS {
 	/**
 	 * getBattery 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array of battery status
 	 */
-	private function getBattery() {
+	public function getBattery() {
 	
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -570,10 +570,10 @@ class OS_Windows extends OS {
 	/**
 	 * getWifi 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array of wifi devices
 	 */
-	private function getWifi() {
+	public function getWifi() {
 	
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -583,10 +583,10 @@ class OS_Windows extends OS {
 	/**
 	 * getSoundCards 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array of soundcards
 	 */
-	private function getSoundCards() {
+	public function getSoundCards() {
 		
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -616,10 +616,10 @@ class OS_Windows extends OS {
 	/**
 	 * getProcessStats 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array of process stats
 	 */
-	private function getProcessStats() {
+	public function getProcessStats() {
 		
 		// Time?
 		if (!empty($this->settings['timer']))
@@ -642,10 +642,10 @@ class OS_Windows extends OS {
 	/**
 	 * getServices 
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array the services
 	 */
-	private function getServices() {
+	public function getServices() {
 	
 		return array(); // TODO
 	}
@@ -653,10 +653,10 @@ class OS_Windows extends OS {
 	/**
 	 * getDistro
 	 * 
-	 * @access private
+	 * @access public
 	 * @return array the distro,version or false
 	 */
-	private function getDistro() {
+	public function getDistro() {
 	
 		return false;
 	}
@@ -664,10 +664,10 @@ class OS_Windows extends OS {
 	/**
 	 * getCPUArchitecture
 	 * 
-	 * @access private
+	 * @access public
 	 * @return string the arch and bits
 	 */
-	private function getCPUArchitecture() {
+	public function getCPUArchitecture() {
 	
 		// Time?
 		if (!empty($this->settings['timer']))
