@@ -103,3 +103,4 @@ v2.0 7/7/2014
  - Converted layout/themes to use sass templating
  - Added motherboard detection for Linux
  - Made hwmon Linux parsing more intricate and work on newer kernels
+ - Fixed Windows and other OSs bug where parser functions are all private
